--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,17 @@ version: '3.8'
 
 services:
   perlenv:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    ## ----- Web ----
+    # build:
+    #   context: .
+    #   dockerfile: Dockerfile
+    image: perl:latest
     container_name: perl_container
     working_dir: /usr/src/app
     volumes:
       - ./app:/usr/src/app
-    command: bash -c "perl app.pl daemon -l http://*:8080"
+    # command: bash -c "perl app.pl daemon -l http://*:8080" # Web
+    command: bash -c "perl app.pl"
     tty: true
-    network_mode: "host"
+    ports:
+      - "8080:8080"
